# pknames

./: .gitignore  Cargo.toml  LICENSE  README.md  build.sh
cli/: Cargo.toml
cli/src/: cli.rs  main.rs
cli/src/cli/: cli.rs  config_folder.rs  follow_list.rs  mod.rs  wot_transformer.rs
cli/src/cli/commands/: add.rs  getinfo.rs  lookup.rs  ls.rs  mod.rs  publish.rs  remove.rs  resolve.rs
cli/src/cli/commands/publisher/: csv_records.rs  pkarr_publisher.rs
cli/src/cli/config_directory/: main_directory.rs  mod.rs  static_lists_directory.rs
cli/src/commands/: add.rs  getinfo.rs  lookup.rs  ls.rs  mod.rs  publish.rs  remove.rs  resolve.rs
cli/src/commands/pkarr/: mod.rs  pkarr_publisher.rs  pkarr_records.rs  publish.rs  resolve.rs
cli/src/commands/publisher/: csv_records.rs  mod.rs  pkarr_publisher.rs  pkarr_records.rs
cli/src/publish/: csv_records.rs  mod.rs  records_file.rs
cli/src/visualization/: visualization.rs
core/: Cargo.toml  LICENSE  README.md
core/src/: lib.rs  resolve.rs
core/src/config_directory/: follow.rs  follow_list.rs  mod.rs  wot_transformer.rs
core/src/config_directory/dirs/: main_directory.rs  static_lists_directory.rs
core/src/prediction/: feed_forward.rs  graph.rs  node.rs  predictor.rs
core/src/pruning/: mod.rs  prune.rs  prune_class_follows.rs  prune_cycles.rs  prune_useless_nodes.rs
core/src/visualization/: edge_vis.rs  node_vis.rs  visualization.rs
dns-server/: Cargo.toml
dns-server/src/: main.rs  pkarr_cache.rs  pkarr_resolver.rs  pknames_resolver.rs  record_cache.rs
examples/publish/: records.conf  records.csv  records.tab
examples/simple/: README.md  secret
hermes/: Cargo.toml  README.md
hermes/src/dns/: context.rs  mod.rs  pknames_resolver.rs  resolve.rs
hermes/src/web/: server.rs
pkdns/: Cargo.toml  README.md
pkdns/src/: main.rs  pkarr_resolver.rs
src/: main.rs
src/cli/: cli.rs  config_folder.rs  lookup.rs  ls.rs  mod.rs
src/cli/commands/: lookup.rs
src/nn/: mod.rs  prediction_model.rs
src/web_of_trust/: feed_forward.rs  follow_list.rs  graph.rs  mod.rs  node.rs  predictor.rs  visualization.rs
src/web_of_trust/prediction/: AllPathSearch.rs  feed_forward.rs  graph.rs  graph_pruner.rs  mod.rs  node.rs  predictor.rs
src/web_of_trust/visualization/: app.rs
web_of_trust/: Cargo.toml
web_of_trust/src/: follow_list.rs  lib.rs  node_vis.rs  visualization.rs
web_of_trust/src/prediction/: graph.rs  graph_pruner.rs  node.rs  predictor.rs
web_of_trust/src/pruning/: graph_pruner.rs  mod.rs  prune.rs  prune_class_follows.rs  prune_cycles.rs  prune_cylcles.rs  prune_undesired_attributions.rs  prune_useless_nodes.rs
web_of_trust/src/visualization/: mod.rs  node_vis.rs  visualization.rs
