[package]
name = "fancydns-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
assert_approx_eq = "1.1.0"
burn = { version = "0.10.0", features = ["ndarray", "train-minimal", "autodiff"] }
clap = { version = "4.4.8", features = ["derive"] }


serde = "1.0.192"
serde_json = "1.0.108"
shellexpand = "3.1.0"


