[package]
name = "pknamescli"
version = "0.1.0"
edition = "2021"

[dependencies]
assert_approx_eq = "1.1.0"
clap = { version = "4.4.8", features = ["derive"] }
serde = "1.0.192"
serde_json = "1.0.108"
shellexpand = "3.1.0"

pknames_core = { path = "../core"}
pkarr = "1.0.1"
zbase32 = "0.1.2"
csv = "1.3.0"
simple-dns = "0.6.0"
chrono = "0.4.31"
ctrlc = "3.4.2"
